remove jdk17 custom profile
This profile breaks jacoco coverage for some reason